--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,18 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Context Menu</title>
   </head>
   <body>
-    <ul class="menu" id="menu"></ul>
+    <ul
+      class="menu menu-compact bg-base-100 w-56 p-2 rounded-box"
+      id="menu"
+    ></ul>
   </body>
 </html>
