sounds module, toast control timer, adds to globals.js

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <ul
-      class="menu menu-compact bg-base-100 w-56 p-2 rounded-box"
+      class="menu menu-compact w-56 p-2 rounded-box bg-base-300"
       id="menu"
     ></ul>
   </body>
