--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
     <title>Context Menu</title>
   </head>
   <body>
