--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -24,5 +24,12 @@
       class="menu menu-compact w-56 p-2 rounded-box bg-base-300"
       id="menu"
     ></ul>
+    <!--  <div
+      class="glitch-text font-bold"
+      style="font-size: 96px"
+      data-text="Тестинг"
+    >
+      Тестинг
+    </div> -->
   </body>
 </html>
